--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 
 # dependencies
 /node_modules
-
+/.pnp
+.pnp.js
 .vscode
 # testing
 /coverage
@@ -22,6 +23,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
 # local env files
 .env*.local
